# mycss

./: .gitignore  INSTALL.md  Makefile  README.md  meson.build
devel/osx/mycss/: main.c
devel/osx/mycss.xcodeproj/: project.pbxproj
devel/osx/mycss.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
devel/osx/mycss.xcodeproj/project.xcworkspace/xcuserdata/alexanderborisov.xcuserdatad/: UserInterfaceState.xcuserstate
devel/osx/mycss.xcodeproj/xcuserdata/alexanderborisov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
devel/osx/mycss.xcodeproj/xcuserdata/alexanderborisov.xcuserdatad/xcschemes/: mycss.xcscheme  xcschememanagement.plist
examples/: Makefile  css_low_level.c  declaration_low_level.c  incoming_buffer_high_level.c  selectors_low_level.c  stylesheet_low_level.c  token_type_convert_high_level.c  tokenizer_buffer_high_level.c  tokenizer_chunk_high_level.c  tokenizer_high_level.c
include/mycss/: an_plus_b.h  api.h  convert.h  entry.h  mycss.h  myosi.h  mystring.h  parser.h  result.h  stylesheet.h  tokenizer.h
include/mycss/declaration/: init.h  parser.h
include/mycss/media/: myosi.h  state.h
include/mycss/namespace/: init.h  myosi.h  parser.h  state.h
include/mycss/property/: parser.h  resources.h
include/mycss/rules/: init.h  myosi.h  state.h
include/mycss/selectors/: function.h  function_resource.h  init.h  list.h  myosi.h  parser.h  pseudo.h  pseudo_resource.h  state.h  value.h  value_resource.h
include/mycss/values/: serialization.h
projects/: CMakeLists.txt
projects/mycss.xcodeproj/: project.pbxproj
projects/mycss.xcodeproj/project.xcworkspace/xcshareddata/: mycss.xcscmblueprint
projects/mycss.xcodeproj/project.xcworkspace/xcuserdata/alexanderborisov.xcuserdatad/: UserInterfaceState.xcuserstate
projects/mycss.xcodeproj/xcuserdata/alexanderborisov.xcuserdatad/xcschemes/: mycss.xcscheme  xcschememanagement.plist
source/: meson.build
source/mycss/: Makefile  an_plus_b.c  an_plus_b.h  api.h  convert.c  entry.c  entry.h  meson.build  mycss.c  mycss.h  myosi.h  mystring.c  mystring.h  parser.c  parser.h  result.c  result.h  selectors.c  selectors.h  stylesheet.c  stylesheet.h  tokenizer.c  tokenizer_global.c  tokenizer_resource.h
source/mycss/declaration/: entry.c  init.c  init.h  meson.build  parser.c  parser.h  state.c
source/mycss/media/: init.c  meson.build  myosi.h  state.c  state.h
source/mycss/namespace/: init.c  init.h  meson.build  myosi.h  parser.c  parser.h  state.c  state.h
source/mycss/property/: const.h  meson.build  parser.c  parser.h
source/mycss/rules/: init.c  init.h  myosi.h  state.c  state.h
source/mycss/selectors/: function.c  function.h  function_resource.h  init.c  init.h  list.c  list.h  meson.build  myosi.h  parser.c  parser.h  pseudo.c  pseudo.h  pseudo_resource.h  state.c  state.h  value.c  value.h  value_resource.h
source/mycss/values/: consume.c  meson.build  serialization.c
test/: Makefile  test.c
test/Selectors/: Basic.txt  pseudo_class_function.txt  pseudo_class_nth.txt
test/test.xcodeproj/: project.pbxproj
test/test.xcodeproj/project.xcworkspace/xcuserdata/alexanderborisov.xcuserdatad/: UserInterfaceState.xcuserstate
test/test.xcodeproj/xcuserdata/alexanderborisov.xcuserdatad/xcschemes/: test.xcscheme  xcschememanagement.plist
utils/: an+b.pl  begin.pl  color.pl  declaration.pl  functions.pl  image.pl  media.pl  mycss_first_char.pl  namespace.pl  pseudo.pl  pseudo_element.pl  rules.pl  selectors.pl  selectors_grammar.pl  units.pl
utils/MyCSS/: CFunction.pm  Grammar.pm  Token.pm
utils/data/: namespace.txt  property.txt  selectors_grammar_work.txt
