hdeclaration = files ([
	'default_entries.h',
	'default.h',
	'default_resources.h',
	'entry_destroy.h',
	'entry_destroy_resources.h',
	'entry.h',
	'init.h',
	'myosi.h',
	'parser.h',
	'serialization.h',
	'serialization_resources.h',
	'state.h'
])

install_headers(
	hdeclaration,
	subdir: join_paths (VERSIONED_PROJECT_NAME, 'declaration')
	)
