hselectors = files ([
	'function.h',
	'function_parser.h',
	'function_resource.h',
	'init.h',
	'list.h',
	'myosi.h',
	'myosi_resource.h',
	'parser.h',
	'pseudo.h',
	'pseudo_resource.h',
	'serialization.h',
	'state.h',
	'value.h',
	'value_resource.h'
])

install_headers(
	hselectors,
	subdir: join_paths (VERSIONED_PROJECT_NAME, 'selectors')
	)
