hvalues = files ([
	'color_const.h',
	'color.h',
	'color_parser.h',
	'color_resources.h',
	'consume.h',
	'destroy.h',
	'image.h',
	'image_resources.h',
	'resources.h',
	'serialization.h',
	'units.h',
	'units_resources.h',
	'values.h'

])

install_headers(
	hvalues,
	subdir: join_paths (VERSIONED_PROJECT_NAME, 'values')
	)
